# DEAN-OS

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  daenctl.py  docker-compose.yml  pyproject.toml
.github/workflows/: github-actions.yml
core-rust/aethelgard/: Cargo.toml
core-rust/aethelgard/src/: main.rs
core-rust/valkyrie-crypto/: Cargo.toml
core-rust/valkyrie-crypto/src/: lib.rs
core-rust/valkyrie-crytpo/src/: lib.rs
docs/: AGENT_GOVERNANCE.md  AGENT_SOP.md  ARCHITECTURE.md  ARCHITECTURE_UPGRADES.md  ARCHITECTURE_UPGRADES_V2.md  ARCHITECTURE_UPGRADES_V3.md  ARCHITECTURE_UPGRADES_V4.md  ARCHITECTURE_UPGRADES_V5.md  ARCHITECTURE_UPGRADES_V6.md  FRONTEND_DESIGN.md  FRONTEND_PLAN.md  OBSERVABILITY.md  SECURITY.md  SECURITY_MANIFESTO.md  TELEMETRY.md  architectural_upgrades_plan.md  upgrade_plan.md  upgrades_v5-2.md  upgrades_v5_1.md
infrastructure/: .vault.json  budget.yaml  host_telemetry.py  policy.yaml  quarantine_forge.py
infrastructure/containers/: sandbox.Dockerfile
mission-control/: Dockerfile  package-lock.json  package.json  tailwind.config.js
mission-control/src/: App.jsx  index.css
services-python/: Dockerfile  alembic.ini  requirements.txt
services-python/database/: models.py  session.py
services-python/migrations/: env.py
services-python/migrations/versions/: 450c86fc4015_initial_schema_for_swarmruns_tasktraces_.py  63072458e652_add_project_tenant_isolation.py
services-python/mnemosyne/: __init__.py  app.py  ingest.py  pyproject.toml
services-python/oubliette/: Dockerfile  __init__.py  app.py  pyproject.toml
services-python/sycophant/: manager.py  orchestrator.py  pyproject.toml  tasks.py
services-python/sycophant/agents/: analyzer.py  architect.py  coder.py  deployer.py  librarian.py  researcher.py  tester.py
services-python/sycophant/routing/: gateway.py
services-python/sycophant/src/sycophant/: __init__.py
services-python/sycophant/telemetry/: tracer.py  watchdog.py
services-python/sycophant/tools/: ast_mapper.py  ast_surgeon.py  security.py
services-rust/aethelgard/: Cargo.toml  Dockerfile
services-rust/aethelgard/src/: main.rs
storage/qdrant_db/: meta.json
storage/qdrant_db/collection/daen_docs/: storage.sqlite
tests/: stress_test.py  test_analyzer.py  test_architect.py  test_deadlock.py  test_knowledge.py  test_mnemosyne.py  test_oubliette.py  test_sycophant.py  test_tester.py  verify_mount.py
tests/agents/: test_analyzer_circuit.py  test_architect_v5.py  test_ast_surgeon.py  test_coder.py  test_deployer.py  test_markdown_scrubber.py  test_researcher.py  test_tester.py
tests/crypto/: test_dlp_egress.py  test_pdp_firewall.py  test_valkyrie.py
tests/system/: test_watchdog.py
workspace/: card.py  config.py  csv_utils.py  game.py  game_config.py  load_state.py  player.py
workspace/models/: player.py
workspace/services/: game_service.py
