[project]
name = "daen-os"
version = "0.1.0"
description = "Distributed Autonomous Engineering Network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# This explicitly tells uv not to try to build the root directory
[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "services-python/mnemosyne",
    "services-python/oubliette",
    "services-python/sycophant"
]
