[project]
name = "daen-os"
version = "0.1.0"
description = "Distributed Autonomous Engineering Network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "services-python/mnemosyne",
    "services-python/oubliette",
    "services-python/sycophant"
]

# Add this back so Maturin and UV have a valid backend to talk to
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.bandit]
exclude_dirs = ["tests", ".venv"]
