[project]
name = "daen-os"
version = "0.1.0"
description = "Distributed Autonomous Engineering Network"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.135.1",
    "qdrant-client>=1.17.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "uvicorn>=0.42.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "services-python/mnemosyne",
    "services-python/oubliette",
    "services-python/sycophant"
]

# Add this back so Maturin and UV have a valid backend to talk to
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.bandit]
exclude_dirs = ["tests", ".venv"]
