[package]
name = "valkyrie-crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "valkyrie_crypto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.35"
serde_yaml = "0.9" # <--- [NEW] YAML Parser
