[package]
name = "valkyrie-crypto"
version = "0.1.0"
edition = "2021"

[lib]
name = "valkyrie_crypto"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.35"
serde_yaml = "0.9"
regex = "1.10" # <--- [NEW] Blazing fast C-level regex

# --- [NEW] Vault Cryptography ---
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
serde_json = "1.0"
