[project]
name = "oubliette"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marquis", email = "marquissanchez94@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
