[project]
name = "sycophant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marquis", email = "marquissanchez94@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.9"
]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
